examples/test/testpolicy15061.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15061
  namespace: namespace399
spec:
  podSelector:
    matchLabels:
      key7: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value19
          key41: value15
          key8: value17
      podSelector:
        matchLabels:
          key37: value6
          key32: value2
